# canvas2camu

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: cli.rs  config.rs  enrollment.rs  gradebook.rs  main.rs  utils.rs  writer.rs
