[package]
name = "canvas2camu"
version = "0.1.0"
edition = "2021"
authors = ["Ian Akotey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
simple_excel_writer="0.2.0"
dirs = "4.0"
office = "0.8.1"
csv = "1.1.6"
snafu = "0.7.1"